feat: add build step to release workflow

--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,46 +1,49 @@
 name: release-please
 
 on:
-  push:
-    branches:
-      - main
+    push:
+        branches:
+            - main
 permissions:
-  contents: write
-  pull-requests: write
-  packages: write
-  issues: write
+    contents: write
+    pull-requests: write
+    packages: write
+    issues: write
 jobs:
-  release-please:
-    outputs:
-      release_created: ${{ steps.release.outputs.release_created }}
-    runs-on: ubuntu-latest
+    release-please:
+        outputs:
+            release_created: ${{ steps.release.outputs.release_created }}
+        runs-on: ubuntu-latest
 
-    steps:
-      - uses: googleapis/release-please-action@v4
-        id: release
-        with:
-          config-file: .github/release-please-config.json
-          manifest-file: .github/release-please-manifest.json
+        steps:
+            - uses: googleapis/release-please-action@v4
+              id: release
+              with:
+                  config-file: .github/release-please-config.json
+                  manifest-file: .github/release-please-manifest.json
 
-  publish-gpr:
-    needs: 
-      - release-please
-    if: needs.release-please.outputs.release_created
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          registry-url: https://npm.pkg.github.com/
+    publish-gpr:
+        needs:
+            - release-please
+        if: needs.release-please.outputs.release_created
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: 20
+                  registry-url: https://npm.pkg.github.com/
 
-      - name: Install pnpm
-        run: npm install -g pnpm
-  
-      - name: Install dependencies
-        run: pnpm install
-  
-      - name: Publish package
-        run: pnpm publish --registry=https://npm.pkg.github.com
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+            - name: Install pnpm
+              run: npm install -g pnpm
+
+            - name: Install dependencies
+              run: pnpm install --frozen-lockfile
+
+            - name: Build app
+              run: pnpm build
+
+            - name: Publish package
+              run: pnpm publish --registry=https://npm.pkg.github.com
+              env:
+                  NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
