--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-    "name": "@shompys/utils",
-    "version": "0.2.0",
-    "type": "module",
-    "main": "dist/index.js",
-    "typings": "dist/index.d.ts",
-    "sideEffects": false,
-    "files": [
-        "dist"
-    ],
-    "release": {
-        "branches": [
-            "main"
-        ]
-    },
-    "publishConfig": {
-        "@shompys:registry": "https://npm.pkg.github.com"
-    },
-    "engines": {
-        "node": ">=20.0.0"
-    },
-    "description": "",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "tsc",
-        "dev": "tsx watch src",
-        "start": "node dist"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "packageManager": "pnpm@10.5.2",
-    "devDependencies": {
-        "tsx": "^4.19.4",
-        "typescript": "^5.8.3"
-    }
+	"name": "@shompys/utils",
+	"version": "0.2.0",
+	"type": "module",
+	"main": "dist/index.js",
+	"typings": "dist/index.d.ts",
+	"sideEffects": false,
+	"files": ["dist"],
+	"release": {
+		"branches": ["main"]
+	},
+	"publishConfig": {
+		"@shompys:registry": "https://npm.pkg.github.com"
+	},
+	"engines": {
+		"node": ">=20.0.0"
+	},
+	"description": "",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "tsc",
+		"dev": "tsx watch src",
+		"start": "node dist",
+		"biome:check": "biome format .",
+		"biome:write": "biome format --write .",
+		"biome:check:all": "biome check .",
+		"biome:write:all": "biome check --write ."
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"packageManager": "pnpm@10.5.2",
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"tsx": "^4.19.4",
+		"typescript": "^5.8.3"
+	}
 }
