--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	"packageManager": "pnpm@10.5.2",
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
+		"@types/node": "^24.1.0",
 		"tsx": "^4.19.4",
 		"typescript": "^5.8.3"
 	}
